# verve

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  render.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  security-audit.yml  unit-test.yml
src/: app.py
src/config/: logger.py  settings.py
src/constants/: audience.py
src/services/: ai_service.py  twitter_service.py
src/tasks/: tweet_task.py
src/utils/: helpers.py
tests/: ai_service_test.py  twitter_service_test.py
