[tool.poetry]
name = "verve"
version = "0.1.0"
description = "A motivational twitter bot"
authors = ["Tejas Nikhar <tejastn10@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.57.4"
python-dotenv = "^1.0.1"
tweepy = "^4.14.0"
standard-imghdr = "^3.13.0"
loguru = "^0.7.3"
urllib3 = "^2.2.3"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.4"
pre-commit = "^4.0.1"
importlib-metadata = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
